--- a/profile.html
+++ b/profile.html
@@ -59,6 +59,7 @@
   </main>
 
   <script src="js/auth.js"></script>
+  <script src="js/data.js"></script>
   <script src="js/progress.js"></script>
   <script>
     window.Auth.guard();
