--- a/course.html
+++ b/course.html
@@ -51,8 +51,9 @@
   </main>
 
   <script src="js/auth.js"></script>
-  <script src="js/progress.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/data_extend.js"></script>
+  <script src="js/progress.js"></script>
   <script src="js/courses.js"></script>
 </body>
 </html>
