--- a/profile.html
+++ b/profile.html
@@ -61,13 +61,14 @@
   <script src="js/auth.js"></script>
   <script src="js/bus.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/data_extend.js"></script>
   <script src="js/progress.js"></script>
   <script>
     window.Auth.guard();
     const u = window.Auth.currentUser();
     document.getElementById('pName').textContent = u.name;
     document.getElementById('pEmail').textContent = u.email;
-    const set = (lang, id) => document.getElementById(id).style.width = window.Progress.percentComplete(u.email, lang) + '%';
+    const set = (lang, id) => { const pct = window.Progress.percentComplete(u.email, lang); const el = document.getElementById(id); el.style.width = pct + '%'; el.title = pct + '% complete'; el.textContent = pct + '%'; };
     const refreshAll = () => { set('java', 'pJava'); set('c', 'pC'); set('python', 'pPython'); };
     refreshAll();
 
