--- a/quiz.html
+++ b/quiz.html
@@ -42,8 +42,9 @@
   </main>
 
   <script src="js/auth.js"></script>
-  <script src="js/progress.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/data_extend.js"></script>
+  <script src="js/progress.js"></script>
   <script src="js/quiz.js"></script>
 </body>
 </html>
