style(ui): glassy theme, animated background, badges on course cards, improved buttons/cards/progress/readability

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,11 @@
       <div class="card course-card" data-lang="java">
         <h3>Java</h3>
         <p class="muted">Object-oriented programming, JVM fundamentals.</p>
+        <div class="badges">
+          <span class="badge badge--blue">OOP</span>
+          <span class="badge">JVM</span>
+          <span class="badge">Beginner</span>
+        </div>
         <div class="progress"><div id="javaProgress" class="bar"></div></div>
         <div class="actions">
           <a class="btn btn-primary" href="course.html?lang=java">Start Learning</a>
@@ -45,6 +50,11 @@
       <div class="card course-card" data-lang="c">
         <h3>C</h3>
         <p class="muted">Low-level programming, pointers, memory.</p>
+        <div class="badges">
+          <span class="badge">Pointers</span>
+          <span class="badge">Memory</span>
+          <span class="badge badge--blue">Low-level</span>
+        </div>
         <div class="progress"><div id="cProgress" class="bar"></div></div>
         <div class="actions">
           <a class="btn btn-primary" href="course.html?lang=c">Start Learning</a>
@@ -55,6 +65,11 @@
       <div class="card course-card" data-lang="python">
         <h3>Python</h3>
         <p class="muted">Clean syntax, batteries-included standard library.</p>
+        <div class="badges">
+          <span class="badge">Beginner</span>
+          <span class="badge">Scripting</span>
+          <span class="badge badge--blue">Data</span>
+        </div>
         <div class="progress"><div id="pythonProgress" class="bar"></div></div>
         <div class="actions">
           <a class="btn btn-primary" href="course.html?lang=python">Start Learning</a>
