feat(content/fullness): add Practice and Resources pages; achievements system; richer dashboard (announcements, tips, achievements); responsive nav; enhanced background grid

--- a/course.html
+++ b/course.html
@@ -17,6 +17,9 @@
     </div>
     <nav class="nav">
       <a href="dashboard.html">Dashboard</a>
+      <a href="course.html?lang=java" class="active">Courses</a>
+      <a href="practice.html">Practice</a>
+      <a href="resources.html">Resources</a>
       <a href="chat.html">Ask CodeMate</a>
       <a href="profile.html">Profile</a>
     </nav>
