--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,9 @@
     </div>
     <nav class="nav">
       <a href="dashboard.html">Dashboard</a>
+      <a href="course.html?lang=java">Courses</a>
+      <a href="practice.html">Practice</a>
+      <a href="resources.html">Resources</a>
       <a href="chat.html">Ask CodeMate</a>
       <a href="profile.html" class="active">Profile</a>
     </nav>
